# litresearch

./: LICENSE  README.md  bibliography.bib  bibliography.html  bibliography.json  bibliography.tex  main.py  paper_analyzer.py  paper_item_template.tex  pyproject.toml  report_generator.py  report_template.tex  requirements.txt  zotero_report_generator.py
