[project]
name = "litresearch"
version = "0.1.0"
description = "Academic Literature Analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "openpyxl",
    "beautifulsoup4",
    "python-dateutil",
    "pyzotero",
    "arxiv",
    "requests",
    "pyperclip",
]

[project.scripts]
litresearch = "main:main"

[tool.hatch.build.targets.wheel]
include = [
    "main.py",
    "paper_analyzer.py",
    "report_generator.py",
    "report_template.tex",
    "paper_item_template.tex",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
